--- a/index.html
+++ b/index.html
@@ -20,35 +20,33 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-            <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Infinity Technology</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            <div class="offcanvas-header" id="close">
+              <h5  class="offcanvas-title" id="offcanvasDarkNavbarLabel">Infinity Technology</h5>
+              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a id="text-canva" class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a id="text-canva" class="nav-link active" aria-current="page" href="#">Inicio</a>
                 </li>
-                <li class="nav-item">
-                  <a id="text-canva" class="nav-link" href="#">Link</a>
-                </li>
+                
                 <li class="nav-item dropdown">
                   <a id="text-canva" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Dropdown
+                    Entrar
                   </a>
                   <ul id="dropdown" class="dropdown-menu dropdown-menu-dark">
-                    <li><a id="text-canva" class="dropdown-item" href="#">Action</a></li>
-                    <li><a id="text-canva" class="dropdown-item" href="#">Another action</a></li>
+                    <li><a id="text-canva" class="dropdown-item" href="#">Entrar</a></li>
+                    <li><a id="text-canva" class="dropdown-item" href="#">Cadastro</a></li>
                     <li>
                       <hr class="dropdown-divider">
                     </li>
-                    <li><a id="text-canva" class="dropdown-item" href="#">Something else here</a></li>
+                    
                   </ul>
                 </li>
               </ul>
               <form class="d-flex mt-3" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-success" type="submit">Search</button>
+                <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
+                <button class="btn btn-success" type="submit">Pesquisar</button>
               </form>
             </div>
           </div>
