--- a/pag/pag1.html
+++ b/pag/pag1.html
@@ -331,16 +331,19 @@
       </div>
     </div>
   </div>
-
+  <div id="end">
+    <a href="#" id="a">Back to top</a>
+</div>
 </main>
 
-<footer class="py-5 text-center text-body-secondary bg-body-tertiary" id="footer">
-  <p>built by <a href="https://github.com/emaravv">@emaravv</a> and .....</p>
-  <p class="mb-0">
-    <a href="#" id="a">Back to top</a>
+<footer id="footer" class="py-5 text-center text-body-secondary bg-body-tertiary" >
+  
+    
   </p>
+  <span class="mb-3 mb-md-0 text-muted">&copy; 2023 Infinity Technology, Inc</span>
 </footer>
 <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
 
     </body>
 </html>
