--- a/pag/login.html
+++ b/pag/login.html
@@ -64,7 +64,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Login</h2>
+        <h2>Entrar</h2>
         <form action="/php/auth.php" method="post">
             <label for="username">Nome de Usuario:</label>
             <input type="text" name="username" required><br>
