--- a/pag/pag1.html
+++ b/pag/pag1.html
@@ -67,8 +67,8 @@
                     Entrar
                   </a>
                   <ul id="dropdown" class="dropdown-menu dropdown-menu-dark">
-                    <li><a id="text-canva" class="dropdown-item" href="#">Entrar</a></li>
-                    <li><a id="text-canva" class="dropdown-item" href="#">Cadastro</a></li>
+                    <li><a id="text-canva" class="dropdown-item" href="login.html">Entrar</a></li>
+                    <li><a id="text-canva" class="dropdown-item" href="register.html">Cadastro</a></li>
                     <li>
                       <hr class="dropdown-divider">
                     </li>
