--- a/php/login.html
+++ b/php/login.html
@@ -66,13 +66,13 @@
     <div class="container">
         <h2>Entrar</h2>
         <form action="auth.php" method="post">
-            <label for="username">Nome de Usuario:</label>
-            <input type="text" name="username" required><br>
+            <label for="userEmail">Nome de Usuario:</label>
+            <input type="email" name="userEmail" required><br>
             <label for="password">Senha:</label>
             <input type="password" name="password" required><br>
             <input type="submit" value="Login">
         </form>
-        <p>Não tem uma conta? <a href="/pag/register.html">Cadastre-se aqui</a></p>
+        <p>Não tem uma conta? <a href="register.html">Cadastre-se aqui</a></p>
     </div>
 </body>
 </html>
