--- a/php/register.html
+++ b/php/register.html
@@ -67,13 +67,13 @@
     <div class="register-container">
         <h2>Cadastro</h2>
         <form action="register.php" method="post">
-            <label for="username">Nome de Usuario:</label>
-            <input type="text" name="username" required><br>
+            <label for="userEmail">Nome de Usuario:</label>
+            <input type="email" name="userEmail" required><br>
             <label for="password">Senha:</label>
             <input type="password" name="password" required><br>
             <input type="submit" value="Cadastrar">
         </form>
-        <p>Ja tem uma conta? <a href="/php/login.html">Faca login</a></p>
+        <p>Ja tem uma conta? <a href="login.html">Faca login</a></p>
     </div>
     
 </body>
