--- a/pag/login.html
+++ b/pag/login.html
@@ -6,15 +6,19 @@
 </head>
 <body>
     <div class="container">
+        
         <h2>Login</h2>
+        <div id="login"></div>
         <form id="login-form">
             <label for="username">Nome de Usuário:</label>
-            <input type="text" id="username" required><br>
+            <input type="email" id="username" required><br>
             <label for="password">Senha:</label>
             <input type="password" id="password" required><br>
             <input type="submit" value="Login">
         </form>
+        <input type="button" value="Sair" onclick="Sair()">
         <p>Não tem uma conta? <a href="register.html">Cadastre-se aqui</a></p>
+        
     </div>
     <script src="/js/login.js"></script>
 </body>
