--- a/pag/register.html
+++ b/pag/register.html
@@ -9,7 +9,7 @@
         <h2>Cadastro</h2>
         <form id="register-form">
             <label for="username">Nome de Usuário:</label>
-            <input type="text" id="username" required><br>
+            <input type="email" id="username" required><br>
             <label for="password">Senha:</label>
             <input type="password" id="password" required><br>
             <input type="submit" value="Cadastrar">
