--- a/pag/pag1.html
+++ b/pag/pag1.html
@@ -164,16 +164,16 @@
           <ul class="list-unstyled">
             <li>
               <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">
-                <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+                <svg class="bd-placeholder-img"  width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><img width="30%" height="30%" src="https://services.meteored.com/img/article/irmao-gemeo-da-terra-venus-pode-ter-tido-placas-tectonicas-tambem-1698544601395_1024.png" alt=""></svg>
                 <div class="col-lg-8">
-                  <h6 id="a" class="mb-0">Artigo 1</h6>
+                  <h6 id="a" class="mb-0">Irmão gêmeo da Terra! Vênus também pode ter tido placas tectônicas</h6>
                   <small id="a" class="text-body-secondary">15 de Outubro, 2023</small>
                 </div>
               </a>
             </li>
             <li>
               <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">
-                <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+                <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><img width="30%" height="30%" src="https://services.meteored.com/img/article/irmao-gemeo-da-terra-venus-pode-ter-tido-placas-tectonicas-tambem-1698544601395_1024.png" alt=""></svg>
                 <div class="col-lg-8">
                   <h6 id="a" class="mb-0">Artigo</h6>
                   <small id="a" class="text-body-secondary">16 de Outubro, 2023</small>
@@ -182,7 +182,7 @@
             </li>
             <li>
               <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">
-                <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+                <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><img width="30%" height="30%" src="https://services.meteored.com/img/article/irmao-gemeo-da-terra-venus-pode-ter-tido-placas-tectonicas-tambem-1698544601395_1024.png" alt=""></svg>
                 <div class="col-lg-8">
                   <h6 class="mb-0" id="a">Artigo 3</h6>
                   <small id="a" class="text-body-secondary">19 de Outubro, 2023</small>
